# ShockAudioLib

./: CMakeLists.txt  LICENSE  README.md
include/components/: AudioChannel.h  AudioTrack.h  Effect.h  MasterChannel.h
include/general/: AudioConfig.h  AudioGenerator.h  AudioProcessor.h  AudioStream.h  ControlAudioProcessor.h  ControlInfo.h  Controller.h  Mixer.h
src/components/: AudioChannel.cpp
src/general/: AudioGenerator.cpp  AudioStream.cpp  ControlAudioProcessor.cpp  ControlInfo.cpp  Mixer.cpp
